# Privacy-D2P-gap-analysis

./: .gitignore  CLAUDE.md  README.md  paper.md  pyproject.toml
configs/: base.yaml
data/processed/: multi_llm_eval.json
docs/: decisions.md  experiment_design_ko.md  methodology_ko.md  reproducibility_ko.md  tech_stack_rationale_ko.md
scripts/: analyze_unknown_trackers.py  check_coverage.py  classify_crawl_failures.py  compute_annotation_metrics.py  generate_figures.py  multi_llm_eval.py  show_results.py
src/: main.py
src/collection/: __init__.py  collector.py  deduplicator.py  schema.py
src/collection/sources/: demoday.py  kstartup.py  manual.py  msme.py  naver_search.py
src/crawling/: crawler.py  robots.py
src/extraction/: extractor.py
src/llm/: evaluator.py
src/mismatch/: calculator.py
src/stats/: analyzer.py
src/tracking/: tracker.py
